# MarkovAlgorithm

./: MarkovAlgorithm.cabal  README.md  stack.yaml
src/: Apply.hs  Main.hs  Parser.hs  Substitution.hs  test
