name:                MarkovAlgorithm
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/MarkovAlgorithm#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable MarkovAlgorithm
  hs-source-dirs:      src
  main-is:             Main.hs
  exposed-modules:     Apply, Parser
  other-modules:       Apply, Parser
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       mtl >= 2.2.2,
                       parsec >= 3.1.13.0
